--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -12,7 +12,7 @@
 	animation: stroke 6s infinite alternate;
 	stroke-width: 2;
 	stroke: #FFFFFF;
-	font-size: 60px;
+	font-size: 50px;
 }
 @keyframes stroke {
 	0%   {
@@ -157,8 +157,9 @@ header{
    
 
 }
-svg text {
-    font-size: 40px;
+
+.svg-name text {
+	font-size: 40px;
 }
     
 }
